`navigator.storage.getDirectory()` fails in nested workers with an `InvalidStateError` https://bugs.webkit.org/show_bug.cgi?id=255458 rdar://108069396

Reviewed by Chris Dumez.

WorkerStorageConnection assumes its Worker's loader is a Document, and thus posts tasks to main thread and asks for
StorageConnection from its loader (WorkerLoaderProxy) directly. This is no longer true after nested worker is enabled --
the loader might be another Worker. Therefore it should get StorageConnection from the real main thread loader (via
WorkerLoaderProxy::postTaskToLoader).

Test: storage/storagemanager/nested-dedicated-workers.html

* LayoutTests/TestExpectations:
* LayoutTests/platform/wk2/TestExpectations:
* LayoutTests/storage/storagemanager/nested-dedicated-workers-expected.txt: Added.
* LayoutTests/storage/storagemanager/nested-dedicated-workers.html: Added.
* LayoutTests/storage/storagemanager/resources/nested-dedicated-workers.js: Added.
(nestedWorker.onmessage):
(nestedWorker.onerror):
* LayoutTests/storage/storagemanager/resources/nested-dedicated-workers2.js: Added.
(navigator.storage.navigator.storage.estimate.then):
(navigator.storage.catch):
* Source/WebCore/Modules/storage/WorkerStorageConnection.cpp:
(WebCore::WorkerStorageConnection::getPersisted):
(WebCore::WorkerStorageConnection::getEstimate):
(WebCore::WorkerStorageConnection::fileSystemGetDirectory):
* Source/WebCore/workers/WorkerLoaderProxy.h:
(WebCore::WorkerLoaderProxy::storageConnection): Deleted.
* Source/WebCore/workers/WorkerMessagingProxy.cpp:
(WebCore::WorkerMessagingProxy::storageConnection): Deleted.
* Source/WebCore/workers/WorkerMessagingProxy.h:

Canonical link: https://commits.webkit.org/263075@main