Source/WebCore/workers/WorkerLoaderProxy.h
@@ -50,9 +50,6 @@ public:
     // Creates a cache storage connection to be used on the main thread. Method must be called on the main thread.
     virtual RefPtr<CacheStorageConnection> createCacheStorageConnection() = 0;
 
-    // Get the storage connection to be used on the main thread.
-    virtual StorageConnection* storageConnection() { return nullptr; };
-
     virtual RefPtr<RTCDataChannelRemoteHandlerConnection> createRTCDataChannelRemoteHandlerConnection() = 0;
 
     virtual ScriptExecutionContextIdentifier loaderContextIdentifier() const = 0;
