LayoutTests/storage/storagemanager/resources/nested-dedicated-workers2.js
@@ -1,0 +1,9 @@
+if (navigator.storage) {
+	navigator.storage.estimate().then((estimate) => {
+		self.postMessage(estimate);
+	}).catch((error) => {
+		self.postMessage('fail');
+	}); 
+} else {
+	self.postMessage('navigator.storage is not available');
+}
